# netcad-netbox

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  tasks.py
netcad_netbox/: __init__.py  nb_cabling_sync.py  nb_site_sync.py  netbox_design_config.py  netbox_map_if_type.py
netcad_netbox/aionetbox/: __init__.py  dyninv.py  nb_dyninv.py  nb_fetch.py  netbox_client.py  openapi_spec3_3.json  pager.py  swagger.py
netcad_netbox/cabling_sync/: __init__.py  nb_cabling_sync.py
netcad_netbox/cli/: __init__.py  cli_nb_main.py  cli_nb_push.py
netcad_netbox/device_sync/: __init__.py  nb_device_push.py  nb_sync_dev_obj_pri_ip.py  nb_sync_device_interfaces.py  nb_sync_device_ipaddrs.py  nb_sync_device_lags.py  nb_sync_device_obj.py
netcad_netbox/plugin/: __init__.py  netbox_plugin_config_def.py  netbox_plugin_globals.py  netbox_plugin_init.py
