[tool.poetry]
name = "netcad-netbox"
version = "0.1.0"
description = "NetBox integration with NetCAD/CAM"
readme = "README.md"
authors = ["Jeremy Schulman"]

[tool.poetry.dependencies]
   python = ">=3.10"
   netcad = ">=0.7.2"
tenacity = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
    fail-under = 0
    verbose = 1
    color = true
    ignore-module = true
    exclude = ["tasks.py", "examples", "build", "venv"]
